# HsSVN

./: .boring  .gitignore  COPYING  ChangeLog  GNUmakefile  HsSVN.buildinfo.in  HsSVN.cabal  INSTALL  Makefile  NEWS  README.rst  Subversion.hsc  cabal-package.mk  configure.ac  stack.yaml
Subversion/: Config.hsc  Error.hsc  FileSystem.hsc  Hash.hsc  Pool.hsc  Repository.hsc  Stream.hsc  String.hsc  Types.hsc
Subversion/FileSystem/: DirEntry.hsc  PathChange.hsc  Revision.hsc  Root.hsc  Transaction.hsc
Subversion/Stream/: Pipe.hs
bugs/: issue-b0b26f399ac3d53a1b22c3ae20871015e67db281.yaml  issue-b611effe92e316690d8785093b2804c527d00b40.yaml  project.yaml
cbits/: HsSVN.c  HsSVN.h
examples/: HelloWorld.hs  Makefile
