Name:          HsSVN
Synopsis:      Partial Subversion (SVN) binding for Haskell
Description:
    .
    HsSVN is a partial Subversion (SVN) binding for Haskell. Currently
    it covers the most part of Subversion FS but others are left
    uncovered.
    .
    Please note that you need to pass some extra options to @cabal
    configure@ when you install HsSVN. See @INSTALL@ in the package
    tarball for details.
    .
Version:       0.4.3.3
License:       PublicDomain
License-File:  COPYING
Author:        PHO <pho at cielonegro dot org>
Maintainer:    PHO <pho at cielonegro dot org>
Stability:     experimental
Homepage:      http://cielonegro.org/HsSVN.html
Category:      System
Tested-With:   GHC == 7.6.2
Cabal-Version: >= 1.6
Build-Type: Configure
Extra-Source-Files:
    HsSVN.buildinfo.in
    INSTALL
    NEWS
    cbits/HsSVN.h
    configure
    configure.ac
    examples/Makefile
    examples/HelloWorld.hs

Source-Repository head
    Type: darcs
    Location: http://darcs.cielonegro.org/HsSVN/

Library
    Build-Depends:
        base       == 4.*,
        bytestring >= 0.9 && < 0.11,
        mtl        >= 2.0 && < 2.2,
        stm        >= 2.2 && < 2.5
    Exposed-Modules:
        Subversion
        Subversion.Config
        Subversion.FileSystem
        Subversion.FileSystem.DirEntry
        Subversion.FileSystem.PathChange
        Subversion.FileSystem.Revision
        Subversion.FileSystem.Root
        Subversion.FileSystem.Transaction
        Subversion.Error
        Subversion.Repository
        Subversion.Types
    Other-Modules:
        Subversion.Hash
        Subversion.Pool
        Subversion.Stream
        Subversion.Stream.Pipe
        Subversion.String
    GHC-Options:
        -Wall
    C-Sources:
        cbits/HsSVN.c
    Include-Dirs:
        cbits
    Install-Includes:
        HsSVN.h
